--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,6 +15,11 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a {
+  text-decoration: none;
+  color: unset;
 }
 
 .container {
@@ -33,6 +43,12 @@ code {
   list-style: none;
 }
 
+.navbar .left {
+  display: flex;
+  gap: 30px;
+  align-items: center;
+}
+
 .cartButton {
   position: relative;
 }
@@ -50,4 +66,110 @@ code {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.categories {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 30px;
+}
+
+.categories .category {
+  text-align: center;
+}
+
+.categories .category ul {
+  list-style: none;
+}
+
+.section {
+  padding: 50px 0;
+}
+
+.productItem {
+  width: 100%;
+}
+
+.productItem h3 {
+  font-weight: 500;
+}
+
+.productItem img {
+  width: 100%;
+}
+.productItem .imgContainer {
+  position: relative;
+  overflow: hidden;
+  border-radius: 20px;
+  height: 350px;
+  display: block;
+}
+
+.productItem .imgContainer img {
+  object-fit: cover;
+  height: 350px;
+}
+
+.productItem .imgContainer img:nth-child(1) {
+  opacity: 1;
+  position: relative;
+  z-index: 3;
+  transition: all 300ms linear;
+}
+
+.productItem:hover .imgContainer img:nth-child(1) {
+  opacity: 0;
+  transition: all 300ms linear;
+}
+
+.productItem .imgContainer img:nth-child(2) {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+.productItem .bottomArea { 
+  height: 48px;
+  position: relative;
+}
+
+.productItem .bottomArea *{
+  background-color: #fff;
+}
+
+.productItem .bottomArea .buttons {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  opacity: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: all 300ms linear;
+}
+
+.productItem:hover .bottomArea .buttons {
+  opacity: 1;
+}
+
+.productItem .bottomArea .buttons button.addToCart {
+  padding: 10px;
+  cursor: pointer;
+}
+
+.productItem .bottomArea .buttons button:nth-child(2) {
+  border: none;
+  outline: none;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.productItem .bottomArea .price {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.productItem .bottomArea .price p.slashed {
+  text-decoration: line-through;
+  color: #d8083c;
 }
