--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,60 @@ a {
   justify-content: center;
 }
 
+.cartButton .cartItems {
+  border-radius: 20px;
+  background-color: #fff;
+  padding: 10px 20px;
+  position: absolute;
+  display: none;
+  flex-direction: column;
+  gap: 30px;
+  z-index: 999;
+  right: 0;
+  width: 300px;
+  box-shadow: 0px 6px 60px 0px rgb(0 0 0 / 13%), 0 32px 64px -48px rgba(0, 0, 0, 0.5);
+}
+
+.cartButton .cartItems.show {
+  display: flex;
+}
+
+.cartButton .theCart {
+  cursor: pointer;
+}
+
+.cartButton .cartItems .cartItem {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+}
+
+.cartButton .cartItems .cartItem img {
+  width: 100px;
+  height: 100px;
+  border-radius: 5px;
+  object-fit: cover;
+}
+
+.cartButton .cartItems .cartItem .deleteBtn {
+  cursor: pointer;
+  border-radius: 5px;
+  color: #d8083c;
+  background-color: #ebd0d6;
+  border: none;
+  outline: none;
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  opacity: 0;
+  transition: all 300ms linear;
+}
+
+.cartButton .cartItems .cartItem:hover .deleteBtn {
+  opacity: 1;
+}
+
 .categories {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
